--- a/source/post/2019/1912.md
+++ b/source/post/2019/1912.md
@@ -16,25 +16,25 @@ title: 跨平台协程库 - libcopp 简介
 type: post
 ---
 
-前端时间有同事联系我想看看可能推广我之前写的协程库 [libcopp][1]，虽然 [libcopp][1] 已经用到过好几个项目上，这几年也断断续续地写了些部分细节的东西，但是也一直没有概览性地写过 [libcopp][1] 的介绍，所以就有了这篇文章。
+前端时间有同事联系我想看看可能推广我之前写的协程库 [libcopp][1]，虽然 [libcopp][1] 已经用到过好几个项目上，这几年也断断续续地写了一些实现细节的文章，但是也但确实需要系统、概览性地介绍下 [libcopp][1] ，所以就有了这篇文章。
 
 Github: https://github.com/owt5008137/libcopp
 Document: https://libcopp.atframe.work/
 
-引言
+[libcopp][1] 的由来
 ------------------------------------------------
 
-协程的概念并不是什么非常新颖的东西，最早有做 [libcopp][1] 的想法的时候，是听了微信分享的 [libco][17] 。但是我们游戏业务里大部分的实现都还是走的事务和Task/Step的模型，特别是C++上异步调用非常得绕。而这种协程的方法可以比较容易地把接口设计得很简洁，而且后续得功能集成上也很容易补破坏原有得API约定，还有微信这么大的业务背书，我们就想在游戏业务里也使用这种方案。我们先是预研了一些类似的方案，但是都不是很尽人意。
+协程的概念并不是什么非常新颖的东西，最早有做 [libcopp][1] 的想法的时候，是听了微信分享的 [libco][17] 。但是我们游戏业务里大部分的实现都还是走的事务和Task/Step的模型，特别是C++上异步调用非常不直观。而这种协程的方法可以比较容易地把接口设计得很简洁，而且后续得功能集成上也很容易补破坏原有的API约定，还有微信这么大的业务背书，我们就想在游戏业务里也使用这种方案。我们先是预研了一些类似的方案，但是都不是特别满意。
 
 ### 相似方案
 
-首先是 [libco][17]， [libco][17] 其实文档比较少，有些使用方式要看它的代码，而且是只支持Linux，但是对编译器得要求还不太明确，而我们项目组有时候会用一些比较新的东西，也是怕后面兼容性上不一定能得到保证。[libco][17] 其实又一大特色是它的共享栈功能和对IO API的hook。前者的设计模式其实我是不太赞同的，因为它会留下一些坑（比如不能传出栈上变量到外部使用），而且对性能影响很大；后者其实对我们的用处不大，因为我们很少会直接去使用那些底层API，而是会接入很多库或者其他接入层来使用，更需要的是容易自定义。另外 [libco][17] 开源出来的仓库似乎几乎没有测试，只有一些sample，总给人一种不太放心的感觉。
+首先是 [libco][17]， [libco][17] 其实文档比较少，有些使用方式要看它的代码，而且是只支持Linux，但是对编译器得要求还不太明确，而我们项目组有时候会用一些比较新的东西，也是怕后面兼容性上不一定能保证。[libco][17] 一大特色是它的共享栈功能和对IO API的hook。前者的设计模式其实我是不太赞同的，因为它会留下一些坑（比如不能传出栈上变量到外部使用），而且对性能影响很大；后者其实对我们的用处不大，因为我们很少会直接去使用那些底层API，而是会接入很多库或者其他接入层来使用，更需要的是容易自定义。另外 [libco][17] 开源出来的仓库似乎几乎没有测试，只有一些sample，总给人一种不太放心的感觉。
 
-我们还研究了 [boost.context][14] ，现在 [boost][13] 又有了新的 [boost.coroutine][26] 和 [boost.coroutin2][27] 库，但是当时还没有。 [boost][13] 库的兼容性和测试都一流，而且整个编程风格都是C++的，性能足够高，看起来非常良好。但是当时 [boost.context][14] 只有很底层的接口，使用上并不是很方便，另外 [boost.context][14] 对上下文对象管理的部分其实适配上也有一些问题。比如当时我们测过一些环境里，编译器版本比较高，但是缺失STL的TLS实现，[boost.context][14]就会直接链接不过。另外 [boost.context][14] 最大的问题是它依赖整个 [boost][13] 的平台和环境检测代码，非常得重（即便用 [bcp][9] 提取依赖，仍然非常重）。我们其实非常排斥为了引入一个小组件，而导入一个超大规模得框架的。而后来出现的 [boost.coroutine][26] 其实实现架构上我觉得式有一些问题的，兼容性更差，实用性也不好，现在已经被 deprecated 掉了， 再后来的 [boost.coroutin2][27] 我之前初步看了一下，感觉结构和 [libcopp][1] 的 [copp][18] 部分差不多。
+我们还研究了 [boost.context][14] ，现在 [boost][13] 又有了新的 [boost.coroutine][26] 和 [boost.coroutin2][27] 库，但是当时还没有。 [boost][13] 库的兼容性和测试都一流，而且整个编程风格都是C++的，性能足够高，看起来非常良好。但是当时 [boost.context][14] 只有很底层的接口，使用上并不是很方便，另外 [boost.context][14] 对上下文对象管理的部分其实适配上也有一些问题。比如当时我们测过一些环境里，编译器版本比较高，但是缺失STL的TLS实现，[boost.context][14]就会直接链接不过。另外 [boost.context][14] 最大的问题是它依赖整个 [boost][13] 的平台和环境检测代码，非常重（即便用 [bcp][9] 提取依赖，仍然非常重）。我们其实非常排斥为了引入一个小组件，而导入一个超大规模得框架的。而后来出现的 [boost.coroutine][26] 我认为实现架构上我觉得式有一些问题的，兼容性更差，实用性也不好，现在已经被 deprecated 掉了， 再后来的 [boost.coroutin2][27] 我之前初步看了一下，感觉结构和 [libcopp][1] 的 [copp][18] 部分差不多。
 
-在当时 [libgo][15] 当时也算是一个比较完善的协程框架了。它做了很多语法糖，上手很简单。当时他也做了和 [libco][17] 一样的共享栈功能，但是后来作者不建议使用了，不知道是不是和我们一样的想法。[libgo][15] 也是依赖的 [boost.context][14]， 但是当时它还没有打包一份出来自己维护，所以也算是依赖很重的框架。它的自定义接入层很简单，但是其实底层是绕了一圈，而且我们的业务需要自己控制调度曾，而它提供的调度层我们似乎并不是很容易剥离，即便剥离了也会有一部分不必要的开销。
+在当时 [libgo][15] 当时也算是一个比较完善的协程框架了。它做了很多语法糖，上手很简单。当时它也做了和 [libco][17] 一样的共享栈功能，但是后来作者不建议使用了，不知道是不是和我们一样的想法。[libgo][15] 也是依赖的 [boost.context][14]， 但是当时它还没有打包一份出来自己维护，所以也算是依赖很重的框架。它的自定义接入层很简单，但是其实底层是绕了一圈，而且我们的业务需要自己控制调度层，而它提供的调度层我们似乎并不是很容易剥离，即便剥离了也会有一部分不必要的开销。
 
-直接基于linux的swap_context和make_context的方案也是不是很完整，还是需要自己封装而且性能不太尽人意。其他的方案其实大同小异，我们就没有逐个去看了，最终还是选择了自己实现一个。于是 [libcopp][1] 就诞生了。
+直接基于linux的swap_context和make_context的方案也是不是很完整，还是需要自己封装而且性能不太令人满意。其他的方案其实大同小异，我们就没有逐个去看了，最终还是选择了自己实现一个。于是 [libcopp][1] 就诞生了。
 
 ### 设计目标
 
@@ -48,15 +48,30 @@ Document: https://libcopp.atframe.work/
 
 所以下面就是我们总结的设计目标了:
 
-+ 跨平台（Linux/macOS/Windows/MinGW + GCC/Clang/MSVC）
-+ 高性能
-+ 易集成，不容易误用，线程安全
-+ 功能简洁，正交性
-+ 容易定制化
-+ 依赖少
-+ Modern C++
++ **跨平台（Linux/macOS/Windows/MinGW + GCC/Clang/MSVC）**
++ **高性能**
++ **易集成，不容易误用，线程安全**
++ **功能简洁，正交性**
++ **容易定制化**
++ **依赖少**
++ **Modern C++**
 
 上面的目标其实也不只是游戏服务器业务的需求点，而是想要保持足够灵活。这样如果其他业务要使用，只需要做少量的接入工作即可。
+
+下面是一些常用方案的简单对比（可能理解上会有差错请见谅）:
+
+| 协程库/方案       |        跨平台           | 原生线程安全支持 |     外部依赖    | 创建性能 | 切换性能     |    扩展性                  |  原生IO支持  |      设计模式          |
+|:-----------------:|:-----------------------:|:----------------:|:---------------:|:--------:|:------------:|:--------------------------:|:------------:|:----------------------:|
+| [libcopp/libcotask][1] | Window/Linux/macOS等 | 所有接口支持   | 无              | 极好     | 很好         | 很好，易扩展，模块化设计   | 无           | C++，仿promise         |
+| [boost.context][14] | Window/Linux/macOS等    | 否             | 很重，依赖boost | 不一定   | 很好         | 很好，原生功能简单         | 无           | C++，需要二次封装      |
+| [boost.coroutine2][27] | Window/Linux/macOS等 | 否             | 很重，依赖boost | 很好     | 很好         | 很好，较复杂，模拟IO回调   | std/boost    | C++，pull/push回调模型 |
+| [libgo][15]       | Window/Linux/macOS等    | 部分，由内置调度层管理 | 很重，依赖boost | 一般     | 很好         | 一般，内置调度器，模拟chan | IO API Hook  | 仿goroutine            |
+| [libco][17]       | 仅支持x86/x86_64的Linux | 否               | 无              | 很好     | 不一定       | 一般，内置静态栈池         | IO API Hook  | 无，需要二次封装       |
+| linux ucontext    | 仅支持Linux             | 否               | 无              | 一般     | 一般         | 一般，只有上下文切换       | 无           | 无，需要二次封装       |
+| [call_in_stack][16] | 仅支持x86/x86_64的Linux | 否             | 无              | 极好     | 极好         | 一般，只有上下文切换       | 无           | 无，需要二次封装       |
+| [librf][35]       | 目前仅支持Windows+MSVC  | 部分，由内置调度层管理 | 依赖C++20       | 很好     | 极好         | 一般，内置调度器，模拟chan | ASIO         | 仿goroutine，仿promise |
+| [C++20 Coroutine][7] | Window/Linux/macOS等 | 否               | 依赖C++20       | 极好     | 极好         | 很好，但非常复杂           | 部分STL      | 无栈协程，需要二次封装 |
+| [goroutine][36]   | Window/Linux/macOS等    | 否               | golang          | 好       | 一般         | 很好，易扩展               | [golang][11] | [channel][32]          |
 
 基本原理和实现架构
 ------------------------------------------------
@@ -65,7 +80,7 @@ Document: https://libcopp.atframe.work/
 
 我没有挨个平台去看 ABI 的文档，所以为了实现跨平台，我在 [libcopp][1] 里是直接引用了 [boost.context][13] 里的 fcontext 部分。但是我把它的平台判定和汇编层代码剥离出来并且符号重命名了，这样可以不依赖庞大的 [boost][13] 库，而且如果哪个项目要用 [boost][13] 也不会冲突。项目里的 [BOOST_LICENSE_1_0.txt](https://github.com/owt5008137/libcopp/blob/v2/BOOST_LICENSE_1_0.txt) 也是这个原因而存在。
 
-[libcopp][1] 大体上分为两部分.第一部分是 [copp][18] ，这部分主要负责偏底层的协程上下文管理、栈管理； 第二部分是 [cotask][19] ， 这部分主要用于一些更高层面设计模式和基于协程的任务模型（包括但不限于进程内唯一ID分配、超时管理、await语义、自定义参数的关联和分配等等），还包含一个 ```task_manager``` 用于基于ID的统一管理和提供超时管理。
+[libcopp][1] 大体上分为两部分.第一部分是 [copp][18] ，这部分主要负责偏底层的协程上下文管理、栈管理； 第二部分是 [cotask][19] ， 这部分主要用于一些更高层面设计模式和基于协程的任务模型（包括但不限于进程内 **唯一ID分配** 、 **超时管理** 、 **await语义** 、 **自定义参数** 的关联和分配等等），还包含一个 ```task_manager``` 用于基于ID的统一管理和提供超时管理。
 
 ![../2018/1806-02.dot.png](../2018/1806-02.dot.png)
 
@@ -73,20 +88,20 @@ Document: https://libcopp.atframe.work/
 
 ### 关于栈池分配器
 
-栈池分配器起源于我大规模使用 [libcopp][1] 的一个项目压力测试的时候，发现实际的CPU占用和预期相差比较大（当时预期 [libcopp][1] 的开销时1%左右，但是实际大约 10%）。 后来分析出来大部分的开销耗在了 **缺页中断** 上面。[libgo][15] 和 [boost.coroutine2][13] 也有这个问题，而 [libco][17] 分配的栈一般都是malloc出来的而且会复用不太会出现这种情况。 其实在 [libcopp][1] 里如果选择使用 *通过malloc分配* 或者 *自定义指定内存地址的分配器* 也不会有这个问题。但是我们希望项目中发现问题（特别是栈溢出）为第一优先级，所以通常我们都会选用 *mmap/unmap(Windows下是VirtualAlloc/VirtualFree)*  。这时候这个问题就凸显出来了，因为每次分配的时候都重新建立地址映射，那么物理页肯定就被释放了。 为了解决这个问题，我们就写了一个 *动态栈池分配器* 这个分配器基本不需要设置，然后接入也只需要简单地改两处调用地代码即可。而之所以时 **动态** 的是因为我们项目中一台机器上可能会搭建很多测试环境，这些环境往往都是低负载、版本不同且提供给很多不同的人用的，所以就想减少低负载服务的内存占用，并且尽可能多地利用好已有内存映射的逻辑地址。 所以最终 *动态栈池分配器* 提供的功能是:
+栈池分配器起源于我大规模使用 [libcopp][1] 的一个项目压力测试的时候，发现实际的CPU占用和预期相差比较大（当时预期 [libcopp][1] 的开销时1%左右，但是实际大约 10%）。 后来分析出来大部分的开销耗在了 **缺页中断** 上面。[libgo][15] 和 [boost.coroutine2][13] 也有这个问题，而 [libco][17] 分配的栈一般都是malloc出来的而且会复用不太会出现这种情况。 其实在 [libcopp][1] 里如果选择使用 *通过malloc分配* 或者 *自定义指定内存地址的分配器* 也不会有这个问题。但是我们希望项目中发现问题（特别是栈溢出）为第一优先级，所以通常我们都会选用 *mmap/unmap(Windows下是VirtualAlloc/VirtualFree)*  。这时候这个问题就凸显出来了，因为每次分配的时候都重新建立地址映射，那么物理页肯定就被释放了。 为了解决这个问题，我们就写了一个 *动态栈池分配器* 。这个分配器基本不需要设置，接入也只需要简单地改两处调用地代码即可。而之所以是 **动态** 的是因为我们项目中一台机器上可能会搭建很多测试环境，这些环境往往都是低负载、版本不同且提供给很多不同的人用的，所以可以减少低负载服务的内存占用，并且尽可能多地利用好已有 ***内存映射的逻辑地址*** 。 所以最终 *动态栈池分配器* 提供的功能是:
 
-+ 栈对象采用 FILO 的模式
++ 栈对象采用 **FILO** 的模式
 + 高负载会自动提高栈池容量，并且带有数量和地址空间大小上限
 + 低负载会自动减小容量，并且带有数量和地址空间大小下限
-+ 可以控制每个tick的回收数量，防止长时间 Stop The World
++ 可以控制每个tick的回收数量，防止长时间 **Stop The World**
 
 ### v1 -> v2的架构变化
 
-[libcopp][1] 有一次比较大规模的重构，其实是伴随着 [boost.context][13] 1.61 版本的一次底层结构大重构。(关于这次 [boost.context][13] 的变化的细节可以参见[《boost.context-1.61版本的设计模型变化》][29])。这次 [boost.context][13] 的大重构把它的底层由对称式协程上下文改成了非对称式，并且接口上对参数透传更加友好。这其实增大了底层上下文使用者的很大的灵活性。但是 [libcopp][1] 在应用中还是使用的对称式，而且对称式理解和管理起来更方便，所以 [libcopp][1] 还是还原了对称式的做法。另外新模型的 [boost.context][13] 的还增加了一个 ontop 事件，用于便于在切入前做一些事情，但是 [libcopp][1] 有自己的事件管理，并且目前还没发现实用的地方，所以还没有使用这个。
+[libcopp][1] 有一次比较大规模的重构，其实是伴随着 [boost.context][13] 1.61 版本的一次底层结构大重构。(关于这次 [boost.context][13] 的变化的细节可以参见[《boost.context-1.61版本的设计模型变化》][29])。这次 [boost.context][13] 的大重构把它的底层 **由对称式协程上下文改成了非对称式** ，并且接口上对参数透传更加友好。这其实增大了底层上下文使用者的很大的灵活性。但是 **[libcopp][1] 在应用中还是使用的对称式** ，而且对称式理解和管理起来更方便，所以 [libcopp][1] 还是还原了对称式的做法。另外新模型的 [boost.context][13] 的还增加了一个 ontop 事件，用于便于在切入前做一些事情，但是 [libcopp][1] 有自己的事件管理，并且目前还没发现实用的地方，所以还没有使用这个。
 
 > [boost.context][13] 其他的变更可以参见 [《libcopp的线程安全、栈池和merge boost.context 1.64.0》][31]
 
-随着这次的结构大重构，我就给 [libcopp][1] 做了一些其他优化。大致的内容是实用分配的栈空间来存放 [libcopp][1] 自身所需的数据结构，并且留了接口给使用者指定自定义的私有数据块。[copp][18]+[cotask][19]的数据结构对齐以后占用空间大约是192字节，但是由于栈空间都是对齐到 4K的，所以 [libcopp][1] 内部对象都会落在CPU Cache的同一组 Cache Line上，导致压力测试的场景下命中率有所下降。另外还使用自己实现的侵入式智能指针代替原有使用的 ```std::shared_ptr``` ，这个的目的是简化接口并且在不需要多线程的时候提供给用户选项关闭多线程安全，这样可以减小智能指针和内部为了保证线程安全的原子操作导致的CPU Cache强制失效。
+随着这次的结构大重构，我就给 [libcopp][1] 做了一些其他优化。大致的内容是实用分配的栈空间来存放 [libcopp][1] 自身所需的数据结构，并且留了接口给使用者指定自定义的私有数据块。[copp][18]+[cotask][19]的数据结构对齐以后占用空间大约 **是192字节** ，但是由于栈空间都是对齐到4K的，所以 [libcopp][1] 内部对象都会落在CPU Cache的同一组 Cache Line上，导致压力测试的场景下命中率有所下降。另外还使用自己实现的侵入式智能指针代替原有使用的 ```std::shared_ptr``` ，这个的目的是简化接口并且在不需要多线程的时候提供给用户选项关闭多线程安全，这样可以减小智能指针和内部为了保证线程安全的原子操作导致的CPU Cache强制失效。
 
 这一次的重构的更多细节可以参见 [《libcopp v2的第一波优化完成》][30] 。
 
@@ -347,14 +362,14 @@ Document: https://libcopp.atframe.work/
 
 目前 [libcopp][1] 的文档不算特别好。现在是通过 [doxygen][32] 和 [pacman][33] 自动生成的API文档并发布在 https://libcopp.atframe.work/ 。README里和sample里目前仅有一些典型的使用方法，反倒是单元测试代码里有所有的接口。现在对一些稍微复杂的使用可能还是需要用户看单元测试来做参照。
 
-未来的开发计划
+后续规划
 ------------------------------------------------
 
 [C++20 Coroutine][5] 已经正式进入了草案，并且它在运行性能、内存占用、语法糖上都有绝对的优势。虽然说离能够正式使用还很遥远，但是底层的库的都需要先行。[libcopp][1] 的下一步计划是思考如何能够和 [C++20 Coroutine][5] 搭配起来，甚至后面如果往 [C++20 Coroutine][5] 上迁移能够平滑地进行。其实要实现让 [libcopp][1] 支持[C++20 Coroutine][5] 的 ```co_await``` 并不是很困难，稍微麻烦的地方在于如何判定编译器和环境是否支持。而另一个最大的困难在于像如何使用或者过渡到 [C++20 Coroutine][5] 的上下文模型。[C++20 Coroutine][5]的一大问题是接入非常麻烦且几个模块的关系非常不直观，如果哪天正式项目中可以使用了肯定是包了好几层的。那么对于 [libcopp][1] 来说就是以后对 [C++20 Coroutine][5] 如何封装和如果能够较容易地过渡过去。
 
 另外就是一些其他环境兼容性检测，和周边工具的支持比如 [cpack][22] 和迁移CI到 [Github Action][28] 。
 
-最后
+开源和交流
 ------------------------------------------------
 
 [libcopp][1] 刚开始的时候就是开源的，当时并没有什么特别的想法，只是说这样存取代码和交流会更方便些。 开源出来以后有一些小伙伴们提出过一些很实用的意见和建议，我也根据实际使用场景针对性地做了各种优化，也算查漏补缺吧。也同时特别感谢下 [mutouyun](http://orzz.org/) 和 [yuanzhubi](https://github.com/yuanzhubi) 都对一些实现细节提供了很多很有用的建议，也欢迎其他有兴趣的小伙伴们一起提意见和交流哈。
@@ -392,3 +407,6 @@ Document: https://libcopp.atframe.work/
 [31]: https://owent.net/2017/1446.html
 [32]: http://doxygen.nl/
 [33]: https://pandoc.org/
+[34]: https://tour.golang.org/concurrency/2
+[35]: https://github.com/tearshark/librf
+[36]: https://tour.golang.org/concurrency/1
