再修订描述

--- a/source/post/2019/1912.md
+++ b/source/post/2019/1912.md
@@ -65,11 +65,11 @@ Document: https://libcopp.atframe.work/
 | [libcopp/libcotask][1] | Window/Linux/macOS等 | 所有接口支持   | 无              | 极好     | 很好         | 很好，易扩展，模块化设计   | 无           | C++，仿promise         |
 | [boost.context][14] | Window/Linux/macOS等    | 否             | 很重，依赖boost | 不一定   | 很好         | 很好，原生功能简单         | 无           | C++，需要二次封装      |
 | [boost.coroutine2][27] | Window/Linux/macOS等 | 否             | 很重，依赖boost | 很好     | 很好         | 很好，较复杂，模拟IO回调   | std/boost    | C++，pull/push回调模型 |
-| [libgo][15]       | Window/Linux/macOS等    | 部分，由内置调度层管理 | 很重，依赖boost | 一般     | 很好         | 较好，内置调度器，模拟chan | IO API Hook  | 仿goroutine            |
+| [libgo][15]       | Window/Linux/macOS等    | 部分，由内置调度层管理 | 很重，依赖boost | 一般 | 很好       | 较好，内置调度器，模拟[channel][32] | IO API Hook  | 仿goroutine   |
 | [libco][17]       | 仅支持x86/x86_64的Linux | 否               | 无              | 很好     | 不一定       | 一般，内置静态栈池         | IO API Hook  | 无，需要二次封装       |
 | linux ucontext    | 仅支持Linux             | 否               | 无              | 一般     | 一般         | 一般，只有上下文切换       | 无           | 无，需要二次封装       |
 | [call_in_stack][16] | 仅支持x86/x86_64的Linux | 否             | 无              | 极好     | 极好         | 一般，只有上下文切换       | 无           | 无，需要二次封装       |
-| [librf][35]       | 目前仅支持Windows+MSVC  | 部分，由内置调度层管理 | 依赖C++20       | 很好     | 极好         | 较好，内置调度器，模拟chan | ASIO         | 仿goroutine，仿promise |
+| [librf][35]       | 目前仅支持Windows+MSVC  | 部分，由内置调度层管理 | 依赖C++20 | 很好     | 极好         | 较好，内置调度器，模拟[channel][32] | ASIO | 仿goroutine，仿promise |
 | [C++20 Coroutine][7] | Window/Linux/macOS等 | 否               | 依赖C++20       | 极好     | 极好         | 很好，但非常复杂           | 部分STL      | 无栈协程，需要二次封装 |
 | [goroutine][36]   | Window/Linux/macOS等    | 否               | golang          | 好       | 一般         | 很好，易扩展               | [golang][11] | [channel][32]          |
 
