fix some spell problem

--- a/source/post/2019/1912.md
+++ b/source/post/2019/1912.md
@@ -16,7 +16,7 @@ title: 跨平台协程库 - libcopp 简介
 type: post
 ---
 
-前端时间有同事联系我想看看可能推广我之前写的协程库 [libcopp][1]，虽然 [libcopp][1] 已经用到过好几个项目上，这几年也断断续续地写了一些实现细节的文章，但是也但确实需要系统、概览性地介绍下 [libcopp][1] ，所以就有了这篇文章。
+前段时间有同事联系我想看看可能推广我之前写的协程库 [libcopp][1]，虽然 [libcopp][1] 已经用到过好几个项目上，这几年也断断续续地写了一些实现细节的文章，但是也但确实需要系统、概览性地介绍下 [libcopp][1] ，所以就有了这篇文章。
 
 Github: https://github.com/owt5008137/libcopp
 Document: https://libcopp.atframe.work/
@@ -24,13 +24,13 @@ Document: https://libcopp.atframe.work/
 [libcopp][1] 的由来
 ------------------------------------------------
 
-协程的概念并不是什么非常新颖的东西，最早有做 [libcopp][1] 的想法的时候，是听了微信分享的 [libco][17] 。但是我们游戏业务里大部分的实现都还是走的事务和Task/Step的模型，特别是C++上异步调用非常不直观。而这种协程的方法可以比较容易地把接口设计得很简洁，而且后续得功能集成上也很容易补破坏原有的API约定，还有微信这么大的业务背书，我们就想在游戏业务里也使用这种方案。我们先是预研了一些类似的方案，但是都不是特别满意。
+协程的概念并不是什么非常新颖的东西，最早有做 [libcopp][1] 的想法的时候，是听了微信分享的 [libco][17] 。但是我们游戏业务里大部分的实现都还是走的事务和Task/Step的模型，特别是C++上异步调用非常不直观。而这种协程的方法可以比较容易地把接口设计得很简洁，而且后续的功能集成上也很容易不破坏原有的API约定，还有微信这么大的业务背书，我们就想在游戏业务里也使用这种方案。我们先是预研了一些类似的方案，但是都不是特别满意。
 
 ### 相似方案
 
-首先是 [libco][17]， [libco][17] 其实文档比较少，有些使用方式要看它的代码，而且是只支持Linux，但是对编译器得要求还不太明确，而我们项目组有时候会用一些比较新的东西，也是怕后面兼容性上不一定能保证。[libco][17] 一大特色是它的共享栈功能和对IO API的hook。前者的设计模式其实我是不太赞同的，因为它会留下一些坑（比如不能传出栈上变量到外部使用），而且对性能影响很大；后者其实对我们的用处不大，因为我们很少会直接去使用那些底层API，而是会接入很多库或者其他接入层来使用，更需要的是容易自定义。另外 [libco][17] 开源出来的仓库似乎几乎没有测试，只有一些sample，总给人一种不太放心的感觉。
+首先是 [libco][17]。 [libco][17] 其实文档比较少，有些使用方式要看它的代码，而且是只支持Linux，但是对编译器的要求还不太明确，而我们项目组有时候会用一些比较新的东西，也是怕后面兼容性上不一定能保证。[libco][17] 一大特色是它的共享栈功能和对IO API的hook。前者的设计模式其实我是不太赞同的，因为它会留下一些坑（比如不能传出栈上变量到外部使用），而且对性能影响很大；后者其实对我们的用处不大，因为我们很少会直接去使用那些底层API，而是会接入很多库或者其他接入层来使用，更需要的是容易自定义。另外 [libco][17] 开源出来的仓库似乎几乎没有测试，只有一些sample，总给人一种不太放心的感觉。
 
-我们还研究了 [boost.context][14] ，现在 [boost][13] 又有了新的 [boost.coroutine][26] 和 [boost.coroutin2][27] 库，但是当时还没有。 [boost][13] 库的兼容性和测试都一流，而且整个编程风格都是C++的，性能足够高，看起来非常良好。但是当时 [boost.context][14] 只有很底层的接口，使用上并不是很方便，另外 [boost.context][14] 对上下文对象管理的部分其实适配上也有一些问题。比如当时我们测过一些环境里，编译器版本比较高，但是缺失STL的TLS实现，[boost.context][14]就会直接链接不过。另外 [boost.context][14] 最大的问题是它依赖整个 [boost][13] 的平台和环境检测代码，非常重（即便用 [bcp][9] 提取依赖，仍然非常重）。我们其实非常排斥为了引入一个小组件，而导入一个超大规模得框架的。而后来出现的 [boost.coroutine][26] 我认为实现架构上我觉得式有一些问题的，兼容性更差，实用性也不好，现在已经被 deprecated 掉了， 再后来的 [boost.coroutin2][27] 我之前初步看了一下，感觉结构和 [libcopp][1] 的 [copp][18] 部分差不多。
+我们还研究了 [boost.context][14] ，现在 [boost][13] 又有了新的 [boost.coroutine][26] 和 [boost.coroutin2][27] 库，但是当时还没有。 [boost][13] 库的兼容性和测试都一流，而且整个编程风格都是C++的，性能足够高，看起来非常良好。但是当时 [boost.context][14] 只有很底层的接口，使用上并不是很方便，另外 [boost.context][14] 对上下文对象管理的部分其实适配上也有一些问题。比如当时我们测过一些环境里，编译器版本比较高，但是缺失STL的TLS实现，[boost.context][14]就会直接链接不过。另外 [boost.context][14] 最大的问题是它依赖整个 [boost][13] 的平台和环境检测代码，非常重（即便用 [bcp][9] 提取依赖，仍然非常重）。我们其实非常排斥为了引入一个小组件，而导入一个超大规模的框架的。而后来出现的 [boost.coroutine][26] 我认为实现架构上我觉得是有一些问题的，兼容性更差，实用性也不好，现在已经 deprecated 掉了， 再后来的 [boost.coroutin2][27] 我之前初步看了一下，感觉结构和 [libcopp][1] 的 [copp][18] 部分差不多。
 
 在当时 [libgo][15] 当时也算是一个比较完善的协程框架了。它做了很多语法糖，上手很简单。当时它也做了和 [libco][17] 一样的共享栈功能，但是后来作者不建议使用了，不知道是不是和我们一样的想法。[libgo][15] 也是依赖的 [boost.context][14]， 但是当时它还没有打包一份出来自己维护，所以也算是依赖很重的框架。它的自定义接入层很简单，但是其实底层是绕了一圈，而且我们的业务需要自己控制调度层，而它提供的调度层我们似乎并不是很容易剥离，即便剥离了也会有一部分不必要的开销。
 
@@ -42,7 +42,7 @@ Document: https://libcopp.atframe.work/
 
 在游戏业务服务器里，会有需要接入各种各样的SDK和调度方式，所以容易集成其他系统就成了最大的优先级。
 
-跨平台的特性是为了我们当时不同人都有自己的开发喜好，每个人都有自己喜欢的工具、环境和流程，我希望是能够适配大家的环境，提供可用且功能一致的版本，在这个基础上，我们线上业务时运行在Linux上的，所以Linux上性能最大化也是优先考虑的。
+跨平台的特性是为了我们当时不同人都有自己的开发喜好，每个人都有自己喜欢的工具、环境和流程，我希望是能够适配大家的环境，提供可用且功能一致的版本，在这个基础上，我们线上业务是运行在Linux上的，所以Linux上性能最大化也是优先考虑的。
 
 在设计 [libcopp][1] 的时候，我也是尽量按照C++的设计风格。因为我觉得现代C++的很多工具对我们排除一些初级错误很有帮助（比如 ```static_assert``` ），所以在实现 [libcopp][1] 的过程中，我们是会检测环境并且尽可能地使用 C++ 的一些新特性来优化性能或是规避问题；另外，因为整体架构和一些编程方法是可能随着时间而演进的，所以我们设计 [libcopp][1] 还会尽可能地让其内部的组件，是可单独拆卸下来的，并且容易剥离和重组，这点一定程度上参考了 [boost.context][14] 的设计；同时我们也会注重单元测试，保持比较高的覆盖率，这样对以后的修改能够更放心一些。
 
@@ -62,25 +62,25 @@ Document: https://libcopp.atframe.work/
 
 | 协程库/方案       |        跨平台           | 原生线程安全支持 |     外部依赖    | 创建性能 | 切换性能     |    扩展性                  |  原生IO支持  |      设计模式          |
 |:-----------------:|:-----------------------:|:----------------:|:---------------:|:--------:|:------------:|:--------------------------:|:------------:|:----------------------:|
-| [libcopp/libcotask][1] | Window/Linux/macOS等 | 所有接口支持   | 无              | 极好     | 很好         | 很好，易扩展，模块化设计   | 无           | C++，仿promise         |
-| [boost.context][14] | Window/Linux/macOS等    | 否             | 很重，依赖boost | 不一定   | 很好         | 很好，原生功能简单         | 无           | C++，需要二次封装      |
-| [boost.coroutine2][27] | Window/Linux/macOS等 | 否             | 很重，依赖boost | 很好     | 很好         | 很好，较复杂，模拟IO回调   | std/boost    | C++，pull/push回调模型 |
-| [libgo][15]       | Window/Linux/macOS等    | 部分，由内置调度层管理 | 很重，依赖boost | 一般 | 很好       | 较好，内置调度器，模拟[channel][32] | IO API Hook  | 仿goroutine   |
+| [libcopp/libcotask][1] | Windows/Linux/macOS等 | 所有接口支持   | 无              | 极好     | 很好         | 很好，易扩展，模块化设计   | 无           | C++，仿promise         |
+| [boost.context][14] | Windows/Linux/macOS等    | 否             | 很重，依赖boost | 不一定   | 很好         | 很好，原生功能简单         | 无           | C++，需要二次封装      |
+| [boost.coroutine2][27] | Windows/Linux/macOS等 | 否             | 很重，依赖boost | 很好     | 很好         | 很好，较复杂，模拟IO回调   | std/boost    | C++，pull/push回调模型 |
+| [libgo][15]       | Windows/Linux/macOS等    | 部分，由内置调度层管理 | 很重，依赖boost | 一般 | 很好       | 较好，内置调度器，模拟[channel][32] | IO API Hook  | 仿goroutine   |
 | [libco][17]       | 仅支持x86/x86_64的Linux | 否               | 无              | 很好     | 不一定       | 一般，内置静态栈池         | IO API Hook  | 无，需要二次封装       |
 | linux ucontext    | 仅支持Linux             | 否               | 无              | 一般     | 一般         | 一般，只有上下文切换       | 无           | 无，需要二次封装       |
 | [call_in_stack][16] | 仅支持x86/x86_64的Linux | 否             | 无              | 极好     | 极好         | 一般，只有上下文切换       | 无           | 无，需要二次封装       |
 | [librf][35]       | 目前仅支持Windows+MSVC  | 部分，由内置调度层管理 | 依赖C++20 | 很好     | 极好         | 较好，内置调度器，模拟[channel][32] | ASIO | 仿goroutine，仿promise |
-| [C++20 Coroutine][7] | Window/Linux/macOS等 | 否               | 依赖C++20       | 极好     | 极好         | 很好，但非常复杂           | 部分STL      | 无栈协程，需要二次封装 |
-| [goroutine][36]   | Window/Linux/macOS等    | 否               | golang          | 好       | 一般         | 很好，易扩展               | [golang][11] | [channel][32]          |
+| [C++20 Coroutine][7] | Windows/Linux/macOS等 | 否               | 依赖C++20       | 极好     | 极好         | 很好，但非常复杂           | 部分STL      | 无栈协程，需要二次封装 |
+| [goroutine][36]   | Windows/Linux/macOS等    | 否               | golang          | 好       | 一般         | 很好，易扩展               | [golang][11] | [channel][32]          |
 
 基本原理和实现架构
 ------------------------------------------------
 
-[libcopp][1] 属于对称式有栈协程，有栈协程的基本原理很简单。不同平台，不同架构的架构下的ABI对函数调用都有一定的规范，比如 x86_64 的基本规范是要求函数的被调方保留好上一帧的 ```R12``` 、 ```R13``` 、 ```R14``` 、 ```R15``` 、 ```RBX``` 、 ```RBP``` （其他特殊的功能比如TSX或者Linux下GCC的动态栈还需要有其他的内容）， 在函数返回后还原，然后函数栈的起始地址有对齐要求。 而有栈协程即是把这些要求被调方处理的寄存器内容保存在栈上，然后直接jmp到新的执行地址即可。在跳回来以后需要还原这些寄存器，对调用方来说，就像调用了一个函数一样。
+[libcopp][1] 属于对称式有栈协程，有栈协程的基本原理很简单。不同平台，不同架构的架构下的 [ABI][37] 对函数调用都有一定的规范，比如 x86_64 的基本规范是要求函数的被调方保留好上一帧的 ```R12``` 、 ```R13``` 、 ```R14``` 、 ```R15``` 、 ```RBX``` 、 ```RBP``` （其他特殊的功能比如TSX或者Linux下GCC的动态栈还需要有其他的内容）， 在函数返回后还原，然后函数栈的起始地址有对齐要求。 而有栈协程即是把这些要求被调方处理的寄存器内容保存在栈上，然后直接jmp到新的执行地址即可。在跳回来以后需要还原这些寄存器，对调用方来说，就像调用了一个函数一样。
 
-我没有挨个平台去看 ABI 的文档，所以为了实现跨平台，我在 [libcopp][1] 里是直接引用了 [boost.context][13] 里的 fcontext 部分。但是我把它的平台判定和汇编层代码剥离出来并且符号重命名了，这样可以不依赖庞大的 [boost][13] 库，而且如果哪个项目要用 [boost][13] 也不会冲突。项目里的 [BOOST_LICENSE_1_0.txt](https://github.com/owt5008137/libcopp/blob/v2/BOOST_LICENSE_1_0.txt) 也是这个原因而存在。
+我没有挨个平台去看 [ABI][37] 的文档，所以为了实现跨平台，我在 [libcopp][1] 里是直接引用了 [boost.context][13] 里的 fcontext 部分。但是我把它的平台判定和汇编层代码剥离出来并且重命名了符号，这样可以不依赖庞大的 [boost][13] 库，而且如果哪个项目要用 [boost][13] 也不会冲突。项目里的 [BOOST_LICENSE_1_0.txt](https://github.com/owt5008137/libcopp/blob/v2/BOOST_LICENSE_1_0.txt) 也是这个原因而存在。
 
-[libcopp][1] 大体上分为两部分.第一部分是 [copp][18] ，这部分主要负责偏底层的协程上下文管理、栈管理； 第二部分是 [cotask][19] ， 这部分主要用于一些更高层面设计模式和基于协程的任务模型（包括但不限于进程内 **唯一ID分配** 、 **超时管理** 、 **await语义** 、 **自定义参数** 的关联和分配等等），还包含一个 ```task_manager``` 用于基于ID的统一管理和提供超时管理。
+[libcopp][1] 大体上分为两部分.第一部分是 [copp][18] ，这部分主要负责偏底层的协程上下文管理、栈管理； 第二部分是 [cotask][19] ， 这部分主要用于一些更高层面的设计模式和基于协程的任务模型（包括但不限于进程内 **唯一ID分配** 、 **超时管理** 、 **await语义** 、 **自定义参数** 的关联和分配等等），还包含一个 ```task_manager``` 用于基于ID的统一管理和提供超时管理。
 
 ![../2018/1806-02.dot.png](../2018/1806-02.dot.png)
 
@@ -410,3 +410,4 @@ Document: https://libcopp.atframe.work/
 [34]: https://tour.golang.org/concurrency/2
 [35]: https://github.com/tearshark/librf
 [36]: https://tour.golang.org/concurrency/1
+[37]: https://en.wikipedia.org/wiki/Application_binary_interface
