--- a/source/post/2019/1999.md
+++ b/source/post/2019/1999.md
@@ -59,20 +59,24 @@ PALM(O, T[D], i, t)
   O[i] = PARTITION-INPUT (O, i, t)
   L[i] = SEARCH (O[i], T[D])
   SYNC(i, t)
-  L'[i] = REDISTRIBUTE-WORK (L[0], . . . , L[t−1], i)
+  L'[i] = REDISTRIBUTE-WORK (L[0], . . . , L[t-1], i)
   (R[i], O'[L'[i]]) = RESOLVE-HAZARDS(L'[i] , O, D)
   for (O[λ], λ) in (O'[L'[i]], L'[i])
     M[1][i] = M[1][i] ∪ MODIFY-NODE (O[λ], λ)
   SYNC(i, t)
-  for d = 1 to depth (TD) − 1
-    M[d'][i] = REDISTRIBUTE-WORK(M[d][0], ..., M[d][t−1], i)
+  for d = 1 to depth (T[D]) - 1
+    M[d'][i] = REDISTRIBUTE-WORK(M[d][0], ..., M[d][t-1], i)
     for (Λ, η) in M[d'][i]
       M[d+1][i] = M[d+1][i] ∪ MODIFY-NODE (Λ, η)
     SYNC(i, t)
   if (i == 0)
-    HANDLE-ROOT(\bigcup(M[d+1][i]), T[D])
-  return (R0, ..., Rt−1)
+    HANDLE-ROOT(⋃(M[d+1][i]), T[D])
+  return (R[0], ..., R[t-1])
 ```
+
+> 上面公式里由于Markdown和公式渲染的限制改成了偏程序的表达形式:
+> ```O``` 是请求集合， ```T[D]``` 是Palm树结构, ```i``` 是线程ID、 ```t``` 是总线程数。
+
 
 B树+每次节点操作前同步actor线程
 
@@ -110,6 +114,18 @@ MODIFY-NODE (Λ, η)
     return {∅, K}
 ```
 
+其他细节优化
+------------------------------------------------
+
+请求排序和线程间同步优化
+[缓存预取指令][5]和[数据预取][4]
+使用SIMD指令集
+
+
 [1]: http://www.vldb.org/pvldb/vol4/p795-sewall.pdf "PALM: Parallel Architecture-Friendly Latch-FreeModifications to B+ Trees on Many-Core Processors"
 [2]: https://en.wikipedia.org/wiki/Knights_Ferry_(Intel) "Knights Ferry"
 [3]: https://www.sciencedirect.com/topics/mathematics/skewed-distributions "skewed distributions"
+[4]: https://en.wikipedia.org/wiki/Cache_prefetching "Cache prefetching"
+[5]: https://en.wikipedia.org/wiki/Cache_control_instruction "Cache control instruction"
+[6]: https://gcc.gnu.org/projects/prefetch.html "GCC - Data Prefetch Support"
+
