fix spell problem again

--- a/source/post/2019/1912.md
+++ b/source/post/2019/1912.md
@@ -84,11 +84,11 @@ Document: https://libcopp.atframe.work/
 
 ![../2018/1806-02.dot.png](../2018/1806-02.dot.png)
 
-其中 [copp][18] 里还分为 **栈分配器** 、 **执行上下文管理** 和 **用户自定义数据** ， 其中 **栈分配器** 是可自定义的，只需要类似 ```std::allocator``` 实现几个接口即可，我们也提供了几个内置的分配器供直接使用，包括 *通过malloc分配* 、 *mmap/unmap(Windows下是VirtualAlloc/VirtualFree)* 、 *自定义指定内存地址的分配器* 、 *Linux下的动态增长栈分配器* 和 *动态栈池分配器* 。这里面 *栈池分配器*  还支持搭配底层使用上面其他的分配器。[cotask][19] 是可选的，如果业务有自己的任务系统也可以不用，并且可以通过编译选项完全关闭， 而在 [cotask][19] 里，*ID分配器* 也是可以自定义的。 这样所使用的业务可以根据自己的需要来选择、搭配或是自定义用自己项目里统一的管理系统。
+其中 [copp][18] 里还分为 **栈分配器** 、 **执行上下文管理** 和 **用户自定义数据** ， 其中 **栈分配器** 是可自定义的，只需要类似 ```std::allocator``` 实现几个接口即可，我们也提供了几个内置的分配器供直接使用，包括 *通过malloc分配* 、 *mmap/unmap(Windows下是VirtualAlloc/VirtualFree)* 、 *自定义指定内存地址的分配器* 、 *Linux下的动态增长栈分配器* 和 *动态栈池分配器* 。这里面 *动态栈池分配器*  还支持搭配底层使用上面其他的分配器。[cotask][19] 是可选的，如果业务有自己的任务系统也可以不用，并且可以通过编译选项完全关闭， 而在 [cotask][19] 里，*ID分配器* 也是可以自定义的。 这样所使用的业务可以根据自己的需要来选择、搭配或是自定义用自己项目里统一的管理系统。
 
 ### 关于栈池分配器
 
-栈池分配器起源于我大规模使用 [libcopp][1] 的一个项目压力测试的时候，发现实际的CPU占用和预期相差比较大（当时预期 [libcopp][1] 的开销时1%左右，但是实际大约 10%）。 后来分析出来大部分的开销耗在了 **缺页中断** 上面。[libgo][15] 和 [boost.coroutine2][13] 也有这个问题，而 [libco][17] 分配的栈一般都是malloc出来的而且会复用不太会出现这种情况。 其实在 [libcopp][1] 里如果选择使用 *通过malloc分配* 或者 *自定义指定内存地址的分配器* 也不会有这个问题。但是我们希望项目中发现问题（特别是栈溢出）为第一优先级，所以通常我们都会选用 *mmap/unmap(Windows下是VirtualAlloc/VirtualFree)*  。这时候这个问题就凸显出来了，因为每次分配的时候都重新建立地址映射，那么物理页肯定就被释放了。 为了解决这个问题，我们就写了一个 *动态栈池分配器* 。这个分配器基本不需要设置，接入也只需要简单地改两处调用地代码即可。而之所以是 **动态** 的是因为我们项目中一台机器上可能会搭建很多测试环境，这些环境往往都是低负载、版本不同且提供给很多不同的人用的，所以可以减少低负载服务的内存占用，并且尽可能多地利用好已有 ***内存映射的逻辑地址*** 。 所以最终 *动态栈池分配器* 提供的功能是:
+栈池分配器起源于我大规模使用 [libcopp][1] 的一个项目压力测试的时候，发现实际的CPU占用和预期相差比较大（当时预期 [libcopp][1] 的开销时1%左右，但是实际大约 10%）。 后来分析出来大部分的开销耗在了 **缺页中断** 上面。[libgo][15] 和 [boost.coroutine2][13] 也有这个问题，而 [libco][17] 分配的栈一般都是malloc出来的而且会复用不太会出现这种情况。 其实在 [libcopp][1] 里如果选择使用 *通过malloc分配* 或者 *自定义指定内存地址的分配器* 也不会有这个问题。但是我们希望项目中发现问题（特别是栈溢出）为第一优先级，所以通常我们都会选用 *mmap/unmap(Windows下是VirtualAlloc/VirtualFree)*  。这时候这个问题就凸显出来了，因为每次分配的时候都重新建立地址映射，那么物理页肯定就被释放了。 为了解决这个问题，我们就写了一个 *动态栈池分配器* 。这个分配器基本不需要设置，接入也只需要简单地改两处调用的代码即可。而之所以是 **动态** 的是因为我们项目中一台机器上可能会搭建很多测试环境，这些环境往往都是低负载、版本不同且提供给很多不同的人用的，所以可以减少低负载服务的内存占用，并且尽可能多地利用好已有 ***内存映射的逻辑地址*** 。 所以最终 *动态栈池分配器* 提供的功能是:
 
 + 栈对象采用 **FILO** 的模式
 + 高负载会自动提高栈池容量，并且带有数量和地址空间大小上限
@@ -97,11 +97,11 @@ Document: https://libcopp.atframe.work/
 
 ### v1 -> v2的架构变化
 
-[libcopp][1] 有一次比较大规模的重构，其实是伴随着 [boost.context][13] 1.61 版本的一次底层结构大重构。(关于这次 [boost.context][13] 的变化的细节可以参见[《boost.context-1.61版本的设计模型变化》][29])。这次 [boost.context][13] 的大重构把它的底层 **由对称式协程上下文改成了非对称式** ，并且接口上对参数透传更加友好。这其实增大了底层上下文使用者的很大的灵活性。但是 **[libcopp][1] 在应用中还是使用的对称式** ，而且对称式理解和管理起来更方便，所以 [libcopp][1] 还是还原了对称式的做法。另外新模型的 [boost.context][13] 的还增加了一个 ontop 事件，用于便于在切入前做一些事情，但是 [libcopp][1] 有自己的事件管理，并且目前还没发现实用的地方，所以还没有使用这个。
+[libcopp][1] 有一次比较大规模的重构，其实是伴随着 [boost.context][13] 1.61 版本的一次底层结构大重构。(关于这次 [boost.context][13] 的变化的细节可以参见[《boost.context-1.61版本的设计模型变化》][29])。这次 [boost.context][13] 的大重构把它的底层 **由对称式协程上下文改成了非对称式** ，并且接口上对参数透传更加友好。这其实增大了底层上下文使用者的很大的灵活性。但是 **[libcopp][1] 在应用中还是使用的对称式** ，而且对称式理解和管理起来更方便，所以 [libcopp][1] 还是还原了对称式的做法。另外新模型的 [boost.context][13] 的还增加了一个 ontop 事件，用于便于在切入前做一些事情。但是 [libcopp][1] 有自己的事件管理，并且还没发现实用的场景，所以还没有使用这个功能。
 
 > [boost.context][13] 其他的变更可以参见 [《libcopp的线程安全、栈池和merge boost.context 1.64.0》][31]
 
-随着这次的结构大重构，我就给 [libcopp][1] 做了一些其他优化。大致的内容是实用分配的栈空间来存放 [libcopp][1] 自身所需的数据结构，并且留了接口给使用者指定自定义的私有数据块。[copp][18]+[cotask][19]的数据结构对齐以后占用空间大约 **是192字节** ，但是由于栈空间都是对齐到4K的，所以 [libcopp][1] 内部对象都会落在CPU Cache的同一组 Cache Line上，导致压力测试的场景下命中率有所下降。另外还使用自己实现的侵入式智能指针代替原有使用的 ```std::shared_ptr``` ，这个的目的是简化接口并且在不需要多线程的时候提供给用户选项关闭多线程安全，这样可以减小智能指针和内部为了保证线程安全的原子操作导致的CPU Cache强制失效。
+随着这次的结构大重构，我就给 [libcopp][1] 做了一些其他优化。大致的内容是使用分配的栈空间来存放 [libcopp][1] 自身所需的数据结构，并且留了接口给使用者指定自定义的私有数据块。[copp][18]+[cotask][19]的数据结构对齐以后占用空间大约 **是192字节** ，但是由于栈空间都是对齐到4K的，所以 [libcopp][1] 内部对象都会落在CPU Cache的同一组 Cache Line上，导致压力测试的场景下命中率有所下降。另外还使用自己实现的侵入式智能指针代替原有使用的 ```std::shared_ptr``` ，这个的目的是简化接口并且在不需要多线程的时候提供给用户选项关闭多线程安全，这样可以减小智能指针和内部为了保证线程安全的原子操作导致的CPU Cache强制失效。
 
 这一次的重构的更多细节可以参见 [《libcopp v2的第一波优化完成》][30] 。
 
@@ -365,7 +365,7 @@ Document: https://libcopp.atframe.work/
 后续规划
 ------------------------------------------------
 
-[C++20 Coroutine][5] 已经正式进入了草案，并且它在运行性能、内存占用、语法糖上都有绝对的优势。虽然说离能够正式使用还很遥远，但是底层的库的都需要先行。[libcopp][1] 的下一步计划是思考如何能够和 [C++20 Coroutine][5] 搭配起来，甚至后面如果往 [C++20 Coroutine][5] 上迁移能够平滑地进行。其实要实现让 [libcopp][1] 支持[C++20 Coroutine][5] 的 ```co_await``` 并不是很困难，稍微麻烦的地方在于如何判定编译器和环境是否支持。而另一个最大的困难在于像如何使用或者过渡到 [C++20 Coroutine][5] 的上下文模型。[C++20 Coroutine][5]的一大问题是接入非常麻烦且几个模块的关系非常不直观，如果哪天正式项目中可以使用了肯定是包了好几层的。那么对于 [libcopp][1] 来说就是以后对 [C++20 Coroutine][5] 如何封装和如果能够较容易地过渡过去。
+[C++20 Coroutine][5] 已经正式进入了草案，并且它在运行性能、内存占用、语法糖上都有绝对的优势。虽然说离能够正式使用还很遥远，但是底层的库的适配都需要先行。[libcopp][1] 的下一步计划是思考如何能够和 [C++20 Coroutine][5] 搭配起来，甚至后面如果往 [C++20 Coroutine][5] 上迁移能够平滑地进行。其实要实现让 [libcopp][1] 支持[C++20 Coroutine][5] 的 ```co_await``` 并不是很困难，稍微麻烦的地方在于如何判定编译器和环境是否支持。而另一个最大的困难在于像如何使用或者过渡到 [C++20 Coroutine][5] 的上下文模型。[C++20 Coroutine][5]的一大问题是接入非常麻烦且几个模块的关系非常不直观，如果哪天正式项目中可以使用了肯定是包了好几层的。那么对于 [libcopp][1] 来说就是以后对 [C++20 Coroutine][5] 如何封装和如果能够较容易地过渡过去。
 
 另外就是一些其他环境兼容性检测，和周边工具的支持比如 [cpack][22] 和迁移CI到 [Github Action][28] 。
 
