--- a/source/post/2019/1999.md
+++ b/source/post/2019/1999.md
@@ -39,7 +39,7 @@ type: post
 
 Bulk Synchronous Parallel (BSP) 。
 
-简单的理解，PALM就是普通B+树然后在某些阶段执行同步操作，收敛工作线程来解决并发执行时传统方案的锁的问题。
+简单的理解，PALM就是普通B+树然后在某些阶段执行同步操作，收敛工作线程来解决并发执行时传统方案的频繁加锁的问题。
 
 PALM 批处理
 ------------------------------------------------
@@ -51,6 +51,7 @@ PALM 批处理
 + INSERT(\\\(T_D\\\) , \\\((k,e)\\\)): \\\(if(k \in T_D)\\\) ，追加数据 \\\(e\\\) 到 \\\(r_k\\\) ；否则初始化 \\\(r_k\\\) 为 \\\({e}\\\) ，然后增加新的指针对 \\\(r^∗_k\\\) 到 \\\(T_D\\\)
 + DELETE(\\\(T_D\\\) , \\\((k,e)\\\)): \\\(if(k \in T_D)\\\) ，把 \\\(e\\\) 从 \\\(r_k\\\) 里移除， 然后 \\\(if(length(r_k)=0)\\\) ，从 \\\(T_D\\\) 里移除指针对 \\\(r^∗_k\\\) ， \\\(if( k \notin T_D)\\\) ，忽略操作
 
+PALM树的核心从系统层面来看最重要的就是它的批处理流程：
 
 ```
 PALM(O, T[D], i, t)
@@ -82,9 +83,15 @@ B树+每次节点操作前同步actor线程
 
 ### REDISTRIBUTE-WORK
 
+上面流程里的 ```REDISTRIBUTE-WORK``` 这一步，简明来说就是构造一个新的执行节点的集合 \\\(L'_i\\\)  ，让它和原来的执行节点的集合 \\\(L_i\\\) 和 \\\(L_j\\\) 满足下面的关系。（ ```i``` 和 ```j``` 是线程ID）
+
 $$
 L'_i = {λ \in L_i|λ \notin L_j , \forall 0 \le j < i}
 $$
+
+上面这个公式的作用是决定一个节点的执行者应该由哪个线程执行。其实换一种程序化的描述很简单，就是把所有的同时有多个执行线程的节点的归属权交给ID小的那个。
+
+> 原Paper里非得写个公式化的东西并且和程序化思维反着来，理解起来绕了一圈。
 
 ### RESOLVE-HAZARDS
 
