--- a/source/post/2019/1999.md
+++ b/source/post/2019/1999.md
@@ -16,14 +16,16 @@ tags:
   - Many-Core
   - Multi-Core
   - BSP
-title: PALM Tree - 适合多核并发架构的B+树
+title: PALM Tree - 适合多核并发架构的B+树 - 论文阅读小记
 type: post
 ---
 
 前言
 ------------------------------------------------
 
-特性：
+年初的时候再知乎上看到有人分享 [PLAM][1] 树的文章，看简介是专为多核并发而设计的树形结构。比较好奇所以抽时间来看了看它的设计原理和是如合做到高并发的。
+
+首先按照论文里介绍的[PLAM][1]的特性：
 
 + Latch-free 的B+树批处理.\(个人理解差不多是无自旋锁\)
 + 多核友好 — 高扩展性，针对SIMD，对缓存友好
@@ -36,8 +38,7 @@ type: post
 + 2.3X–19X the state of the art on [skewed distributions][3].
 + 将来的Intel Knights Ferry CPU可以获得1.5–2.1倍的性能。
 + 更容易测试和维护
-
-Bulk Synchronous Parallel (BSP) 。
++ 基于 [Bulk Synchronous Parallel (BSP) ][7] 模型。
 
 简单的理解，PALM就是普通B+树然后在某些阶段执行同步操作，收敛工作线程来解决并发执行时传统方案的频繁加锁的问题。
 
@@ -128,6 +129,12 @@ MODIFY-NODE (Λ, η)
 [缓存预取指令][5]和[数据预取][4]
 使用SIMD指令集
 
+最后
+------------------------------------------------
+
+度这篇Paper主要是了解一下它的原理，可能对以后默写系统的设计实现有参考价值。我就没有去写一个了，Paper里的性能测试报告差不多是个量级层面的参考，我就不贴了。他们的测试机器配置还不错，比我们目前项目里用的好一些，性能差别也不会大到哪里去。
+
+文中如果有哪些地方理解有偏差欢迎小伙伴们交流指正哈。
 
 [1]: http://www.vldb.org/pvldb/vol4/p795-sewall.pdf "PALM: Parallel Architecture-Friendly Latch-FreeModifications to B+ Trees on Many-Core Processors"
 [2]: https://en.wikipedia.org/wiki/Knights_Ferry_(Intel) "Knights Ferry"
@@ -135,4 +142,4 @@ MODIFY-NODE (Λ, η)
 [4]: https://en.wikipedia.org/wiki/Cache_prefetching "Cache prefetching"
 [5]: https://en.wikipedia.org/wiki/Cache_control_instruction "Cache control instruction"
 [6]: https://gcc.gnu.org/projects/prefetch.html "GCC - Data Prefetch Support"
-
+[7]: https://en.wikipedia.org/wiki/Bulk_synchronous_parallel
