--- a/source/post/2020/2002.md
+++ b/source/post/2020/2002.md
@@ -53,7 +53,7 @@ nftables与iptables
 以下是一些常用命令:
 
 | [iptables][3]                                                                              | [nftables][2]                                                                             | 说明                                   |
-|:------------------------------------------------------------------------------------------:|:-----------------------------------------------------------------------------------------:|:--------------------------------------:|
+|:-------------------------------------------------------------------------------------------|:------------------------------------------------------------------------------------------|:---------------------------------------|
 | ```iptables -t mangle -L```                                                                | ```nft list table mangle```                                                               | 显示指定table(mangle)的所有chains      |
 | -                                                                                          | ```nft list ruleset```                                                                    | 显示所有table的所有chains              |
 | ```iptables -t mangle -A V2RAY -j TRACE```                                                 | ```nft add rule inet mangle V2RAY meta nftrace set 1```                                   | 跟踪调试包                             |
@@ -61,16 +61,18 @@ nftables与iptables
 
 > 上面跟踪调试包流程的时候 [nftables][2] 可以用 ``` nft monitor trace``` 来查看包的状态流转。具体可参见 Wiki: https://wiki.nftables.org/wiki-nftables/index.php/Ruleset_debug/tracing
 
-[nftables][2] 有个工具 **iptables-nft** (```iptables-translate [iptables参数列表]```) 可以用来转换 [iptables][3] 表达式到 [nftables][2]表达式。但是我自己实测的不是很全有些地方也有些谬误。
+
+在 [nftables][2] 里有个工具 **iptables-nft** (```iptables-translate [iptables参数列表]```) 可以用来转换 [iptables][3] 表达式到 [nftables][2]表达式。但是我自己实测的不是很全有些地方也有些谬误。
 
 nftables与ebtables
 ----------------------------------------------
 
 上面的流程图显示来自于桥接的走了另一套状态流转的流程。要控制桥接的流程，传统的做法可以使用 [ebtables][7] 。按文档的说法 （ https://www.mankier.com/8/ebtables-legacy#Description-Tables ）， 在 BROUTE 链DROP掉包，能阻止桥接来的包走转发规则，从而转走路由规则。 但是在 [nftables][2] 的文档里仅有 https://www.mankier.com/8/nft#Statements-Payload_Statement 里写了个例子改路由。然而我尝试了几次并没有成功。不管我怎么设置，最终还是走了桥接的包转发，并没有走我指定的流转路径（比如转换成tproxy）。另外还看到个文档 （ https://www.mankier.com/8/ebtables-nft ） [nftables][2] 目前还不支持对 BROUTE 的HOOK。所以我自己这里目前还是走的用 [ebtables][7] 。
 
-[ebtables][7] 使用起来比 [iptables][3] 麻烦一些，很多插件功能不支持，有些规则也有些限制，比如不支持 [ipset][8] 。但是凑合着还算好用吧。
+个人感觉 [ebtables][7] 使用起来比 [iptables][3] 麻烦一些，很多插件功能不支持，有些规则也有些限制，比如不支持 [ipset][8] 。但是凑合着还算好用吧。
 
 > 使用 [ebtables][7] 需要开启内核模块: ```br_netfilter```
+
 
 另外如果要使用网桥包转路由然后走比如tproxy需要增加如下配置:
 
